Added glass as an entity who has it's own image